--- a/credentials.yml
+++ b/credentials.yml
@@ -17,15 +17,15 @@ rest:
 #  slack_channel: "<the slack channel>"
 #  slack_signing_secret: "<your slack signing secret>"
 
-socketio:
-  user_message_evt: user_uttered
-  bot_message_evt: bot_uttered
-  session_persistence: false
+#socketio:
+#  user_message_evt: user_uttered
+#  bot_message_evt: bot_uttered
+#  session_persistence: false
 
-twilio:
-  account_sid: "ACe1629829ac71185bcadaa1f633502fc5"
-  auth_token: "e804efc9d8d4cc01cd6d8fd10e9fdb69"
-  twilio_number: "whatsapp:+14155238886"
+#twilio:
+#  account_sid: "ACe1629829ac71185bcadaa1f633502fc5"
+#  auth_token: "e804efc9d8d4cc01cd6d8fd10e9fdb69"
+#  twilio_number: "whatsapp:+14155238886"
 
 #mattermost:
 #  url: "https://<mattermost instance>/api/v4"
