--- a/credentials.yml
+++ b/credentials.yml
@@ -20,7 +20,7 @@ rest:
 socketio:
   user_message_evt: user_uttered
   bot_message_evt: bot_uttered
-  session_persistence: true
+  session_persistence: false
 
 twilio:
   account_sid: "ACe1629829ac71185bcadaa1f633502fc5"
