--- a/data/stories.yml
+++ b/data/stories.yml
@@ -5,7 +5,7 @@ stories:
   - story: no es y si conoce
     steps:
     - intent: saludos
-#    - action: action_restart2
+    - action: action_restart
     - action: action_hello
     - intent: negación
       entities:
@@ -38,7 +38,7 @@ stories:
   - story: no es, no lo conoce
     steps:
     - intent: saludos
-#    - action: action_restart2
+    - action: action_restart
     - action: action_hello
     - intent: negación
       entities:
@@ -72,7 +72,7 @@ stories:
   - story: si es, si paga, si autoriza
     steps:
     - intent: saludos
-#    - action: action_restart2
+    - action: action_restart
     - action: action_hello
     - intent: afirmación
       entities:
@@ -117,7 +117,7 @@ stories:
   - story: si es, si paga y no autoriza
     steps:
     - intent: saludos
-#    - action: action_restart2
+    - action: action_restart
     - action: action_hello
     - intent: afirmación
       entities:
@@ -161,7 +161,7 @@ stories:
   - story: interactive_story_1
     steps:
     - intent: saludos
-#    - action: action_restart2
+    - action: action_restart
     - action: action_hello
     - intent: afirmación
       entities:
@@ -205,7 +205,7 @@ stories:
   - story: interactive_story_2
     steps:
     - intent: saludos
-#    - action: action_restart2
+    - action: action_restart
     - action: action_hello
     - intent: afirmación
       entities:
