--- a/data/rules.yml
+++ b/data/rules.yml
@@ -19,8 +19,8 @@ rules:
     steps:
       - intent: out_of_scope
       - action: utter_default
-#      - action: action_ask_question3
-#      - action: action_hello
+      - action: action_ask_question3
+      - action: action_hello2
 
   - rule: fallback2
     steps:
