--- a/data/stories.yml
+++ b/data/stories.yml
@@ -245,3 +245,45 @@ stories:
     - action: action_autoriza_o_no
     - action: action_final
     - action: action_restart2
+
+  - story: interactive_story_2
+    steps:
+    - action: action_hello2
+    - intent: afirmación
+      entities:
+      - respuesta: si
+    - action: persona_form
+    - active_loop: persona_form
+    - slot_was_set:
+      - es_o_no: si
+    - slot_was_set:
+      - requested_slot: null
+    - active_loop: null
+    - action: action_ask_question
+    - intent: negación
+      entities:
+      - respuesta: no
+    - action: paga_form
+    - active_loop: paga_form
+    - slot_was_set:
+      - pagará_o_no: no
+    - slot_was_set:
+      - requested_slot: null
+    - active_loop: null
+    - action: action_no_paga
+    - intent: afirmación
+      entities:
+      - respuesta: si
+    - action: autoriza_form
+    - active_loop: autoriza_form
+    - slot_was_set:
+      - autoriza_o_no: si
+    - slot_was_set:
+      - requested_slot: null
+    - active_loop: null
+    - action: action_contactar
+    - action: action_recibir_es_o_no
+    - action: action_recibir_paga_o_no
+    - action: action_autoriza_o_no
+    - action: action_final
+    - action: action_restart2
