--- a/data/rules.yml
+++ b/data/rules.yml
@@ -1,44 +1,198 @@
 version: "2.0"
 rules:
 
-  - rule: inicio
-    steps:
-      - intent: inicio
-      - action: action_restart
-#      - action: action_hello
 
-  - rule: eres bot?
+  - rule: eres bot1?
+    steps:
+      - action: action_hello
+      - intent: eres_humano
+      - action: utter_bot
+      - action: action_hello
+
+  - rule: eres bot2?
     steps:
       - action: action_ask_question
       - intent: eres_humano
       - action: utter_bot
-      - action: action_ask_question2
       - action: action_ask_question
+
+  - rule: eres bot3?
+    steps:
+      - action: action_conoce
+      - intent: eres_humano
+      - action: utter_bot
+      - action: action_conoce
+
+  - rule: eres bot4?
+    steps:
+      - action: action_si_conoce
+      - intent: eres_humano
+      - action: utter_bot
+      - action: action_si_conoce
+
+  - rule: eres bot5?
+    steps:
+      - action: action_contactar
+      - intent: eres_humano
+      - action: utter_bot
+      - action: action_contactar
+
+  - rule: eres bot6?
+    steps:
+      - action: action_si_paga
+      - intent: eres_humano
+      - action: utter_bot
+      - action: action_si_paga
+
+  - rule: eres bot7?
+    steps:
+      - action: action_no_paga
+      - intent: eres_humano
+      - action: utter_bot
+      - action: action_no_paga
+
+  - rule: eres bot8?
+    steps:
+      - action: action_despedida
+      - intent: eres_humano
+      - action: utter_bot
+      - action: action_despedida
+
+
+  - rule: eres bot9?
+    steps:
+      - action: utter_despedida
+      - intent: eres_humano
+      - action: utter_bot
+      - action: utter_despedida
       
+#  - rule: fallback
+#    steps:
+#      - intent: out_of_scope
+#      - action: utter_default
+#      - action: action_ask_question3
+#      - action: action_hello2
+
   - rule: fallback
     steps:
       - intent: out_of_scope
       - action: utter_default
-      - action: action_ask_question3
-      - action: action_hello2
 
-  - rule: fallback2
+#  - rule: space
+#    steps:
+#      - intent: space
+#      - action: utter_default
+#      - action: action_ask_question3
+#      - action: action_hello2
+
+  - rule: me repite 1
     steps:
       - action: action_hello
-      - intent: out_of_scope
+      - intent: me_repite
       - action: action_hello
 
-  - rule: fallback3
+  - rule: me repite 2
     steps:
       - action: action_ask_question
-      - intent: out_of_scope
+      - intent: me_repite
       - action: action_ask_question
 
-  - rule: fallback4
+  - rule: me repite 3
     steps:
       - action: action_conoce
-      - intent: out_of_scope
+      - intent: me_repite
       - action: action_conoce
+
+  - rule: me repite 4
+    steps:
+      - action: action_si_conoce
+      - intent: me_repite
+      - action: action_si_conoce
+
+  - rule: me repite 5
+    steps:
+      - action: action_contactar
+      - intent: me_repite
+      - action: action_contactar
+
+  - rule: me repite 6
+    steps:
+      - action: action_si_paga
+      - intent: me_repite
+      - action: action_si_paga
+
+  - rule: me repite 7
+    steps:
+      - action: action_no_paga
+      - intent: me_repite
+      - action: action_no_paga
+
+  - rule: me repite 8
+    steps:
+      - action: action_despedida
+      - intent: me_repite
+      - action: action_despedida
+
+  - rule: me repite 9
+    steps:
+      - action: utter_despedida
+      - intent: me_repite
+      - action: utter_despedida
+
+#  - rule: fallback2
+#    steps:
+#      - action: action_hello
+#      - intent: out_of_scope
+#      - action: action_hello
+
+#  - rule: fallback3
+#    steps:
+#      - action: action_ask_question
+#      - intent: out_of_scope
+#      - action: action_ask_question
+
+#  - rule: fallback4
+#    steps:
+#      - action: action_conoce
+#      - intent: out_of_scope
+#      - action: action_conoce
+
+#  - rule: fallback5
+#    steps:
+#      - action: action_si_conoce
+#      - intent: out_of_scope
+#      - action: action_si_conoce
+
+#  - rule: fallback6
+#    steps:
+#      - action: action_contactar
+#      - intent: out_of_scope
+#      - action: action_contactar
+
+#  - rule: fallback7
+#    steps:
+#      - action: action_si_paga
+#      - intent: out_of_scope
+#      - action: action_si_paga
+
+#  - rule: fallback8
+#    steps:
+#      - action: action_no_paga
+#      - intent: out_of_scope
+#      - action: action_no_paga
+
+#  - rule: fallback9
+#    steps:
+#      - action: action_despedida
+#      - intent: out_of_scope
+#      - action: action_despedida
+
+#  - rule: fallback10
+#    steps:
+#      - action: utter_despedida
+#      - intent: out_of_scope
+#      - action: utter_despedida
+
 
   - rule: pregunta fecha
     steps:
@@ -46,6 +200,7 @@ rules:
       - action: action_fecha
 #      - action: action_ask_question2
 #      - action: action_ask_question
+
 
   - rule: pregunta monto
     steps:
@@ -68,7 +223,7 @@ rules:
       - action: action_donde
       - action: action_hello2
 
-  - rule: de que parte llama
+  - rule: de que parte llama2
     steps:
       - action: action_ask_question
       - intent: de_donde
