--- a/data/stories.yml
+++ b/data/stories.yml
@@ -57,8 +57,7 @@ stories:
     - action: lo_conoce_form
     - active_loop: lo_conoce_form
     - slot_was_set:
-      - conoce_o_no:
-        - no lo conozco
+      - conoce_o_no: no 
     - slot_was_set:
       - requested_slot: null
     - active_loop: null
@@ -246,7 +245,7 @@ stories:
     - action: action_final
     - action: action_restart2
 
-  - story: interactive_story_2
+  - story: interactive_story_3
     steps:
     - action: action_hello2
     - intent: afirmación
@@ -287,3 +286,72 @@ stories:
     - action: action_autoriza_o_no
     - action: action_final
     - action: action_restart2
+
+  - story: interactive_story_4
+    steps:
+    - action: action_hello2
+    - intent: negación
+      entities:
+      - respuesta: no
+    - action: persona_form
+    - active_loop: persona_form
+    - slot_was_set:
+      - es_o_no: no
+    - intent: negación
+      entities:
+      - respuesta: no
+    - action: persona_form
+    - active_loop: persona_form
+    - slot_was_set:
+      - es_o_no: no
+    - slot_was_set:
+      - requested_slot: null
+    - active_loop: null
+    - action: action_conoce
+    - intent: afirmación
+      entities:
+      - respuesta: si
+    - action: lo_conoce_form
+    - active_loop: lo_conoce_form
+    - slot_was_set:
+      - conoce_o_no: si
+    - slot_was_set:
+      - requested_slot: null
+    - active_loop: null
+    - action: action_si_conoce
+    - action: action_recibir_es_o_no
+    - action: action_guardar_conoce_o_no
+    - action: action_final
+    - action: action_restart2
+
+
+  - story: interactive_story_5
+    steps:
+    - action: action_hello2
+    - intent: negación
+      entities:
+      - respuesta: no 
+    - action: persona_form
+    - active_loop: persona_form
+    - slot_was_set:
+      - es_o_no: no
+    - slot_was_set:
+      - requested_slot: null
+    - active_loop: null
+    - action: action_conoce
+    - intent: negación
+      entities:
+      - respuesta: no lo conozco
+    - action: lo_conoce_form
+    - active_loop: lo_conoce_form
+    - slot_was_set:
+      - conoce_o_no: no
+    - slot_was_set:
+      - requested_slot: null
+    - active_loop: null
+    - action: utter_despedida
+    - action: action_recibir_es_o_no
+    - action: action_guardar_conoce_o_no
+    - action: action_final
+    - action: action_restart2
+
