--- a/data/rules.yml
+++ b/data/rules.yml
@@ -66,16 +66,16 @@ rules:
       - action: utter_bot
       - action: utter_despedida
       
-#  - rule: fallback
-#    steps:
-#      - intent: out_of_scope
-#      - action: utter_default
+  - rule: fallback
+    steps:
+      - intent: out_of_scope
+      - action: utter_default_repetir
 #      - action: action_ask_question3
 #      - action: action_hello2
 
   - rule: fallback
     steps:
-      - intent: out_of_scope
+      - intent: nlu_fallback
       - action: utter_default
 
 #  - rule: space
