--- a/domain.yml
+++ b/domain.yml
@@ -35,7 +35,7 @@ slots:
     influence_conversation: true
 responses:
   utter_default:
-  - text: Disculpe, no logré escuchar ¿Sería tan amable de responder con un si o un no?
+  - text: Disculpe, ¿Sería tan amable de responder con un si o un no?
   utter_default_repetir:
   - text: Disculpe, no le entendí ¿Me podrá repetir lo dicho?
   utter_despedida:
