--- a/data/rules.yml
+++ b/data/rules.yml
@@ -1,6 +1,7 @@
 version: "2.0"
 rules:
 
+ 
 
   - rule: eres bot1?
     steps:
@@ -47,7 +48,7 @@ rules:
 #      - action: action_ask_question3
 #      - action: action_hello2
 
-  - rule: fallback
+  - rule: fallback2
     steps:
       - intent: nlu_fallback
       - action: utter_default_repetir
