--- a/domain.yml
+++ b/domain.yml
@@ -77,6 +77,7 @@ actions:
 - utter_default_repetir
 - utter_despedida
 - utter_pregunta_contactar_ejecutivo
+- action_restart_slots
 forms:
   persona_form:
     required_slots:
