--- a/data/stories.yml
+++ b/data/stories.yml
@@ -5,7 +5,8 @@ stories:
   - story: no es y si conoce
     steps:
     - intent: saludos
-    - action: action_restart_slots
+    - slot_was_set:
+      - es_o_no: None
     - action: action_hello
     - intent: negación
       entities:
@@ -38,7 +39,8 @@ stories:
   - story: no es, no lo conoce
     steps:
     - intent: saludos
-    - action: action_restart_slots
+    - slot_was_set:
+      - es_o_no: None
     - action: action_hello
     - intent: negación
       entities:
@@ -71,7 +73,8 @@ stories:
   - story: si es, si paga, si autoriza
     steps:
     - intent: saludos
-    - action: action_restart_slots
+    - slot_was_set:
+      - es_o_no: None
     - action: action_hello
     - intent: afirmación
       entities:
@@ -116,7 +119,8 @@ stories:
   - story: si es, si paga y no autoriza
     steps:
     - intent: saludos
-    - action: action_restart_slots
+    - slot_was_set:
+      - es_o_no: None
     - action: action_hello
     - intent: afirmación
       entities:
@@ -160,7 +164,8 @@ stories:
   - story: interactive_story_1
     steps:
     - intent: saludos
-    - action: action_restart_slots
+    - slot_was_set:
+      - es_o_no: None
     - action: action_hello
     - intent: afirmación
       entities:
@@ -204,7 +209,8 @@ stories:
   - story: interactive_story_2
     steps:
     - intent: saludos
-    - action: action_restart_slots
+    - slot_was_set:
+      - es_o_no: None
     - action: action_hello
     - intent: afirmación
       entities:
