--- a/data/stories.yml
+++ b/data/stories.yml
@@ -5,8 +5,13 @@ stories:
   - story: no es y si conoce
     steps:
     - intent: saludos
+    - action: persona_form
+    - active_loop: persona_form
     - slot_was_set:
       - es_o_no: None
+    - slot_was_set:
+      - requested_slot: null
+    - active_loop: null
     - action: action_hello
     - intent: negación
       entities:
@@ -39,8 +44,13 @@ stories:
   - story: no es, no lo conoce
     steps:
     - intent: saludos
+    - action: persona_form
+    - active_loop: persona_form
     - slot_was_set:
       - es_o_no: None
+    - slot_was_set:
+      - requested_slot: null
+    - active_loop: null
     - action: action_hello
     - intent: negación
       entities:
@@ -73,8 +83,13 @@ stories:
   - story: si es, si paga, si autoriza
     steps:
     - intent: saludos
+    - action: persona_form
+    - active_loop: persona_form
     - slot_was_set:
       - es_o_no: None
+    - slot_was_set:
+      - requested_slot: null
+    - active_loop: null
     - action: action_hello
     - intent: afirmación
       entities:
@@ -119,8 +134,13 @@ stories:
   - story: si es, si paga y no autoriza
     steps:
     - intent: saludos
+    - action: persona_form
+    - active_loop: persona_form
     - slot_was_set:
       - es_o_no: None
+    - slot_was_set:
+      - requested_slot: null
+    - active_loop: null
     - action: action_hello
     - intent: afirmación
       entities:
@@ -164,8 +184,13 @@ stories:
   - story: interactive_story_1
     steps:
     - intent: saludos
+    - action: persona_form
+    - active_loop: persona_form
     - slot_was_set:
       - es_o_no: None
+    - slot_was_set:
+      - requested_slot: null
+    - active_loop: null
     - action: action_hello
     - intent: afirmación
       entities:
@@ -209,8 +234,13 @@ stories:
   - story: interactive_story_2
     steps:
     - intent: saludos
+    - action: persona_form
+    - active_loop: persona_form
     - slot_was_set:
       - es_o_no: None
+    - slot_was_set:
+      - requested_slot: null
+    - active_loop: null
     - action: action_hello
     - intent: afirmación
       entities:
