--- a/data/rules.yml
+++ b/data/rules.yml
@@ -1,7 +1,56 @@
 version: "2.0"
 rules:
 
+  - rule: eres bot1?
+    conversation_start: true
+    steps:
+    - intent: saludos
+    - action: action_hello  
 
+  - rule: eres bot1?
+    condition:
+    - slot_was_set:
+      - es_o_no: no
+    steps:
+    - action: action_conoce
+    - intent: afirmación
+      entities:
+      - respuesta: si
+    - action: lo_conoce_form
+    - active_loop: lo_conoce_form
+    - slot_was_set:
+      - conoce_o_no: si
+    - slot_was_set:
+      - requested_slot: null
+    - active_loop: null
+    - action: action_si_conoce
+    - action: action_recibir_es_o_no
+    - action: action_guardar_conoce_o_no
+    - action: action_final
+    - action: action_restart2     
+
+  - rule: eres bot1?
+    condition:
+    - slot_was_set:
+      - es_o_no: si
+    steps:
+    - action: action_conoce
+    - intent: negación
+      entities:
+      - respuesta: no
+    - action: lo_conoce_form
+    - active_loop: lo_conoce_form
+    - slot_was_set:
+      - conoce_o_no: no 
+    - slot_was_set:
+      - requested_slot: null
+    - active_loop: null
+    - action: utter_despedida
+    - action: action_recibir_es_o_no
+    - action: action_guardar_conoce_o_no
+    - action: action_final
+    - action: action_restart2    
+ 
   - rule: eres bot1?
     steps:
       - action: action_hello
