--- a/config.yml
+++ b/config.yml
@@ -21,9 +21,9 @@ pipeline:
    - name: ResponseSelector
      epochs: 100
      constrain_similarities: true
-   - name: FallbackClassifier
-     threshold: 0.6
-     ambiguity_threshold: 0.1
+#   - name: FallbackClassifier
+#     threshold: 0.6
+#     ambiguity_threshold: 0.1
 
 # Configuration for Rasa Core.
 # https://rasa.com/docs/rasa/core/policies/
@@ -35,6 +35,8 @@ policies:
    - name: RulePolicy
    - name: UnexpecTEDIntentPolicy
      epochs: 100
+     max_history: 10
    - name: TEDPolicy
      epochs: 100
+     max_history: 10
      constrain_similarities: true
