--- a/data/stories.yml
+++ b/data/stories.yml
@@ -3,7 +3,10 @@ stories:
 
 
   - story: no es y si conoce
-    steps:  
+    steps:
+    - intent: saludos
+    - action: action_slot_reset
+    - action: action_hello  
     - intent: negación
       entities:
       - respuesta: no
@@ -14,56 +17,64 @@ stories:
     - slot_was_set:
       - requested_slot: null
     - active_loop: null
-#    - action: action_conoce
-#    - intent: afirmación
-#      entities:
-#      - respuesta: si
-#    - action: lo_conoce_form
-#    - active_loop: lo_conoce_form
-#    - slot_was_set:
-#      - conoce_o_no: si
-#    - slot_was_set:
-#      - requested_slot: null
-#    - active_loop: null
-#    - action: action_si_conoce
-#    - action: action_recibir_es_o_no
-#    - action: action_guardar_conoce_o_no
-#    - action: action_final
-#    - action: action_restart2
+    - action: action_conoce
+    - checkpoint: action_ask_conoce
+    - intent: afirmación
+      entities:
+      - respuesta: si
+    - action: lo_conoce_form
+    - active_loop: lo_conoce_form
+    - slot_was_set:
+      - conoce_o_no: si
+    - slot_was_set:
+      - requested_slot: null
+    - active_loop: null
+    - action: action_si_conoce
+    - action: action_recibir_es_o_no
+    - action: action_guardar_conoce_o_no
+    - action: action_final
+    - action: action_restart2
 
 
-#  - story: no es, no lo conoce
-#    steps:
-#    - intent: negación
-#      entities:
-#      - respuesta: no 
-#    - action: persona_form
-#    - active_loop: persona_form
-#    - slot_was_set:
-#      - es_o_no: no
-#    - slot_was_set:
-#      - requested_slot: null
-#    - active_loop: null
-#    - action: action_conoce
-#    - intent: negación
-#      entities:
-#      - respuesta: no
-#    - action: lo_conoce_form
-#    - active_loop: lo_conoce_form
-#    - slot_was_set:
-#      - conoce_o_no: no 
-#    - slot_was_set:
-#      - requested_slot: null
-#    - active_loop: null
-#    - action: utter_despedida
-#    - action: action_recibir_es_o_no
-#    - action: action_guardar_conoce_o_no
-#    - action: action_final
-#    - action: action_restart2
+  - story: no es, no lo conoce
+    steps:
+    - intent: saludos
+    - action: action_slot_reset
+    - action: action_hello
+    - intent: negación
+      entities:
+      - respuesta: no 
+    - action: persona_form
+    - active_loop: persona_form
+    - slot_was_set:
+      - es_o_no: no
+    - slot_was_set:
+      - requested_slot: null
+    - active_loop: null
+    - action: action_conoce
+    - checkpoint: action_ask_conoce
+    - intent: negación
+      entities:
+      - respuesta: no
+    - action: lo_conoce_form
+    - active_loop: lo_conoce_form
+    - slot_was_set:
+      - conoce_o_no: no 
+    - slot_was_set:
+      - requested_slot: null
+    - active_loop: null
+    - action: utter_despedida
+    - action: action_recibir_es_o_no
+    - action: action_guardar_conoce_o_no
+    - action: action_final
+    - action: action_restart2
 
 
   - story: si es, si paga, si autoriza
     steps:
+    - intent: saludos
+    - action: action_slot_reset
+    - action: action_hello 
     - intent: afirmación
       entities:
       - respuesta: si
@@ -75,6 +86,7 @@ stories:
       - requested_slot: null
     - active_loop: null
     - action: action_ask_question
+    - checkpoint: action_ask
     - intent: afirmación
       entities:
       - respuesta: si
@@ -102,10 +114,14 @@ stories:
     - action: action_autoriza_o_no
     - action: action_final
     - action: action_restart2
- 
+
+
 
   - story: si es, si paga y no autoriza
     steps:
+    - intent: saludos
+    - action: action_slot_reset
+    - action: action_hello 
     - intent: afirmación
       entities:
       - respuesta: si
@@ -145,8 +161,12 @@ stories:
     - action: action_final
     - action: action_restart2
 
+
   - story: interactive_story_1
     steps:
+    - intent: saludos
+    - action: action_slot_reset
+    - action: action_hello 
     - intent: afirmación
       entities:
       - respuesta: si
@@ -188,6 +208,9 @@ stories:
 
   - story: interactive_story_2
     steps:
+    - intent: saludos
+    - action: action_slot_reset
+    - action: action_hello 
     - intent: afirmación
       entities:
       - respuesta: si
@@ -227,6 +250,282 @@ stories:
     - action: action_final
     - action: action_restart2
 
+  - story: interactive_story_2
+    steps:
+    - intent: saludos
+    - action: action_slot_reset
+    - action: action_hello 
+    - intent: afirmación
+      entities:
+      - respuesta: si
+    - action: persona_form
+    - active_loop: persona_form
+    - slot_was_set:
+      - es_o_no: si
+    - slot_was_set:
+      - requested_slot: null
+    - active_loop: null
+    - action: action_ask_question
+    - intent: negación
+      entities:
+      - respuesta: no
+    - action: paga_form
+    - active_loop: paga_form
+    - slot_was_set:
+      - pagará_o_no: no
+    - slot_was_set:
+      - requested_slot: null
+    - active_loop: null
+    - action: action_no_paga
+    - intent: saludos
+    - action: action_slot_reset
+    - action: action_hello 
 
 
 
+
+
+
+
+  - story: si es, saluda y no es
+    steps:
+    - intent: saludos
+    - action: action_slot_reset
+    - action: action_hello 
+    - intent: afirmación
+      entities:
+      - respuesta: si
+    - action: persona_form
+    - active_loop: persona_form
+    - slot_was_set:
+      - es_o_no: si
+    - slot_was_set:
+      - requested_slot: null
+    - active_loop: null
+    - action: action_ask_question
+    - intent: saludos
+    - action: action_slot_reset
+    - action: action_hello
+    - intent: negación
+      entities:
+      - respuesta: no
+    - action: persona_form
+    - active_loop: persona_form
+    - slot_was_set:
+      - es_o_no: no
+    - slot_was_set:
+      - requested_slot: null
+    - active_loop: null
+    - action: action_conoce
+    - checkpoint: action_ask_conoce
+
+  - story: no es, saluda y si es
+    steps:
+    - intent: saludos
+    - action: action_slot_reset
+    - action: action_hello 
+    - intent: negación
+      entities:
+      - respuesta: no
+    - action: persona_form
+    - active_loop: persona_form
+    - slot_was_set:
+      - es_o_no: no
+    - slot_was_set:
+      - requested_slot: null
+    - active_loop: null
+    - action: action_ask_question
+    - intent: saludos
+    - action: action_slot_reset
+    - action: action_hello
+    - intent: afirmación
+      entities:
+      - respuesta: si
+    - action: persona_form
+    - active_loop: persona_form
+    - slot_was_set:
+      - es_o_no: si
+    - slot_was_set:
+      - requested_slot: null
+    - active_loop: null
+    - action: action_ask_question
+    - checkpoint: action_ask
+
+  - story: no es y saluda
+    steps:
+    - intent: saludos
+    - action: action_slot_reset
+    - action: action_hello 
+    - intent: negación
+      entities:
+      - respuesta: no
+    - action: persona_form
+    - active_loop: persona_form
+    - slot_was_set:
+      - es_o_no: no
+    - slot_was_set:
+      - requested_slot: null
+    - active_loop: null
+    - action: action_conoce
+    - intent: saludos
+    - action: action_slot_reset
+    - action: action_hello
+
+  - story: si es y saluda
+    steps:
+    - intent: saludos
+    - action: action_slot_reset
+    - action: action_hello 
+    - intent: afirmación
+      entities:
+      - respuesta: si
+    - action: persona_form
+    - active_loop: persona_form
+    - slot_was_set:
+      - es_o_no: si
+    - slot_was_set:
+      - requested_slot: null
+    - active_loop: null
+    - action: action_ask_question
+    - intent: saludos
+    - action: action_slot_reset
+    - action: action_hello
+
+  - story: si es, saluda y si es
+    steps:
+    - intent: saludos
+    - action: action_slot_reset
+    - action: action_hello 
+    - intent: afirmación
+      entities:
+      - respuesta: si
+    - action: persona_form
+    - active_loop: persona_form
+    - slot_was_set:
+      - es_o_no: si
+    - slot_was_set:
+      - requested_slot: null
+    - active_loop: null
+    - action: action_ask_question
+    - intent: saludos
+    - action: action_slot_reset
+    - action: action_hello
+    - intent: afirmación
+      entities:
+      - respuesta: si
+    - action: persona_form
+    - active_loop: persona_form
+    - slot_was_set:
+      - es_o_no: si
+    - slot_was_set:
+      - requested_slot: null
+    - active_loop: null
+    - action: action_ask_question
+    - checkpoint: action_ask
+
+  - story: no es, saluda y no es
+    steps:
+    - intent: saludos
+    - action: action_slot_reset
+    - action: action_hello 
+    - intent: negación
+      entities:
+      - respuesta: no
+    - action: persona_form
+    - active_loop: persona_form
+    - slot_was_set:
+      - es_o_no: no
+    - slot_was_set:
+      - requested_slot: null
+    - active_loop: null
+    - action: action_conoce
+    - intent: saludos
+    - action: action_slot_reset
+    - action: action_hello
+    - intent: negación
+      entities:
+      - respuesta: no
+    - action: persona_form
+    - active_loop: persona_form
+    - slot_was_set:
+      - es_o_no: no
+    - slot_was_set:
+      - requested_slot: null
+    - active_loop: null
+    - action: action_conoce
+    - checkpoint: action_ask
+
+  - story: finish flow
+    steps:
+    - checkpoint: action_ask
+    - intent: negación
+      entities:
+      - respuesta: no
+    - action: paga_form
+    - active_loop: paga_form
+    - slot_was_set:
+      - pagará_o_no: no
+    - slot_was_set:
+      - requested_slot: null
+    - active_loop: null
+    - action: action_no_paga
+    - intent: saludos
+    - action: action_slot_reset
+    - action: action_hello 
+
+  - story: finish flow
+    steps:
+    - checkpoint: action_ask
+    - intent: afirmación
+      entities:
+      - respuesta: si
+    - action: paga_form
+    - active_loop: paga_form
+    - slot_was_set:
+      - pagará_o_no: si
+    - slot_was_set:
+      - requested_slot: null
+    - active_loop: null
+    - action: action_si_paga
+    - intent: saludos
+    - action: action_slot_reset
+    - action: action_hello 
+
+
+  - story: no es no conoce
+    steps:
+    - checkpoint: action_ask_conoce
+    - intent: negación
+      entities:
+      - respuesta: no
+    - action: lo_conoce_form
+    - active_loop: lo_conoce_form
+    - slot_was_set:
+      - conoce_o_no: no 
+    - slot_was_set:
+      - requested_slot: null
+    - active_loop: null
+    - action: utter_despedida
+    - action: action_recibir_es_o_no
+    - action: action_guardar_conoce_o_no
+    - action: action_final
+    - action: action_restart2
+
+  - story: no es si conoce
+    steps:
+    - checkpoint: action_ask_conoce
+    - intent: afirmación
+      entities:
+      - respuesta: si
+    - action: lo_conoce_form
+    - active_loop: lo_conoce_form
+    - slot_was_set:
+      - conoce_o_no: si 
+    - slot_was_set:
+      - requested_slot: null
+    - active_loop: null
+    - action: action_si_conoce
+    - action: action_recibir_es_o_no
+    - action: action_guardar_conoce_o_no
+    - action: action_final
+    - action: action_restart2
